# hpwh-data-model

./: .gitignore  LICENSE.txt  build_hpwh.py  dodo.py  pyproject.toml
.github/workflows/: test.yaml
cpp/: config.yaml
data_model/: AOSmithHPTS50_out.yaml  Rheem2020Prem50_out.yaml
data_model/examples/: AOSmithHPTS50.yaml  (+2 more)
examples/: AOSmithCAHP120.json  AOSmithHPTS40.json  AOSmithHPTS50.json  AOSmithHPTS50.yaml  AOSmithHPTS66.json  AOSmithHPTS80.json  AOSmithHPTU50.json  AOSmithHPTU66.json  AOSmithHPTU80.json  AOSmithHPTU80_DR.json  AOSmithPHPT60.json  AOSmithPHPT80.json  AWHSTier3Generic40.json  AWHSTier3Generic50.json  AWHSTier3Generic65.json  AWHSTier3Generic80.json  AWHSTier4Generic40.json  AWHSTier4Generic50.json  AWHSTier4Generic65.json  AWHSTier4Generic80.json  AquaThermAire.json  BWC2020_65.json  BradfordWhiteAeroThermRE2H50.json  BradfordWhiteAeroThermRE2H65.json  BradfordWhiteAeroThermRE2H80.json  ColmacCxA_10_MP.json  ColmacCxA_10_SP.json  ColmacCxA_15_MP.json  ColmacCxA_15_SP.json  ColmacCxA_20_MP.json  ColmacCxA_20_MP.yaml  ColmacCxA_20_SP.json  ColmacCxA_20_SP.yaml  ColmacCxA_25_MP.json  ColmacCxA_25_SP.json  ColmacCxA_30_MP.json  ColmacCxA_30_SP.json  ColmacCxV_5_MP.json  ColmacCxV_5_SP.json  GE.json  (+71 more)
schema/: ASHRAE205.schema.yaml  CentralWaterHeatingSystem.schema.yaml  HPWHSIMINPUT.schema.yaml  HPWHSimInput.schema.yaml  HPWHsimInput.schema.yaml  HeatSourceConfiguration.schema.yaml  RSAIRTOWATERHEATPUMP.schema.yaml  RSCONDENSERWATERHEATSOURCE.schema.yaml  RSINTEGRATEDWATERHEATER.schema.yaml  RSRESISTANCEWATERHEATSOURCE.schema.yaml  RSTANK.schema.yaml
(+5 files in other folders)
