[project]
name = "hpwh-data-model"
version = "0.1.0"
description = ""
authors = [{ name = "Big Ladder Software" }]
requires-python = ">=3.13"
dependencies = ["lattice"]

[dependency-groups]
dev = [
    "doit==0.36.0",
    "tomli==2.0.1",
]

[tool.uv]

[tool.uv.sources]
lattice = { git = "https://github.com/bigladder/lattice.git", branch = "main" }

